--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,12 @@ environment:
   sdk: ^3.8.0
   flutter: '>=3.3.0'
 
+
 dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
